syntax = "proto3";

// protoc -I=. --cpp_out=. test.proto
// protoc -I=. --grpc_out=. --plugin=protoc-gen-grpc=/home/dkwapisz/grpc/cmake/build/grpc_cpp_plugin test.proto

package Test;

service GetInfo {
  rpc GetLevelInfo (LevelInfoRequest) returns (LevelInfoReply) {}
}

message LevelInfoRequest {
  int32 playerCoins = 1;
  int32 levelCoins = 2;
}

message LevelInfoReply {
  int32 playerCoins = 1;
  int32 levelCoins = 2;
}