syntax = "proto3";

message LevelInfo {
  int32 playerCoins = 1;
  int32 levelCoins = 2;
}